Login Sign Up Logout

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'basic.html' %}
 
-{% block title %} About {% endblock title %}
+{% block title %} Login {% endblock title %}
 
 {% block body %}
-<h1>About Me</h1>
+    <h1>Login</h1>
 {% endblock body %}
