--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,13 @@
 {% extends 'basic.html' %}
-
 {% block title %} Suchak Dahal {% endblock title %}
-
 {% block hero %}
-<section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-  <div class="hero-container" data-aos="fade-in">
-    <h1>Alex Smith</h1>
-    <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
-  </div>
-</section>
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+    <div class="hero-container" data-aos="fade-in">
+      <h1>Suchak Dahal</h1>
+      <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
+    </div>
+  </section>
+
 {% endblock hero %}
+
+
