--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,14 @@
       <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
     </div>
   </section>
-
 {% endblock hero %}
 
 
+{% block body %}
+{% for message in messages %}
+<div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+  <strong>{{message}} </strong>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+{% endblock body %}
