--- a/templates/basic.html
+++ b/templates/basic.html
@@ -43,14 +43,14 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="{% static 'assets/img/profile-img.jpg' %}" alt="" class="img-fluid rounded-circle">
+        <img src="{% static 'assets/img/suchak.jpg' %}" alt="Suchak" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Welcome {{user.username}}</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/?hl=en" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="#" target="_blank" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://www.linkedin.com/feed/?trk=404_page" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
