--- a/templates/handleblog.html
+++ b/templates/handleblog.html
@@ -8,12 +8,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Welcome to my Blog</h2>
+          <h2>Welcome to My Blog</h2>
 
         </div>
 
         <div class="row">
-            {% for post in posts %}
+            {% for post in posts reversed %}
                 <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
 
                 <div class="col-lg-4" data-aos="fade-right">
