--- a/templates/basic.html
+++ b/templates/basic.html
@@ -65,6 +65,8 @@
 
           <li><a href="/contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
 
+          <li><a href="/internshipdetails" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Internship Form</span></a></li>
+
 {% if not request.user.is_authenticated %}
 
           <li><a href="/auth/signup" class="nav-link scrollto"><i class="bx bx-user"></i> <span>SignUp</span></a></li>
@@ -101,7 +103,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Suchak Dahal</span></strong>
       </div>
       <div class="credits">
 
