--- a/templates/basic.html
+++ b/templates/basic.html
@@ -43,7 +43,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="{% static 'assets/img/suchak.jpg' %}" alt="Suchak" class="img-fluid rounded-circle">
+        <img src="{% static 'assets/img/sd.jpg' %}" alt="Suchak" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Welcome {{user.username}}</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
