--- a/templates/contact.html
+++ b/templates/contact.html
@@ -45,7 +45,7 @@
           <h5>
             <span><i class="bx bx-envelope"></i> Email</span>
           </h5>
-          <input type="email" value = {{user.email}} class="form-control mb-3" name="email" required/>
+          <input type="email" value = "{{user.email}}" class="form-control mb-3" name="email" required/>
         </div>
 
           <div class="form-group">
