--- a/templates/handleblog.html
+++ b/templates/handleblog.html
@@ -17,7 +17,7 @@
                 <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
 
                 <div class="col-lg-4" data-aos="fade-right">
-                <img src="{{post.img.url}}" class="img-fluid" alt="no-image">
+                <img src="{{post.img.url}}" class="img-fluid" alt="no-image" width="100" height="100">
                 </div>
                 <br>
                 <div class="icon"><i class="bi bi-briefcase"></i></div>
